PO-8416 Modify Trial Registration Status Section (REG)/PO-8418 Implement PO-8416: finished new trial registration.
git-svn-id: https://ncisvn.nci.nih.gov/svn/coppa/trunk/code@17943 553898ca-32d5-487a-af8b-6cf4ca579ab4